{
  "version": 4,
  "terraform_version": "1.10.3",
  "serial": 26,
  "lineage": "fdc3da83-5934-bca2-46fb-2b25072157e8",
  "resources": [
    {
      "module": "module.auto_scaling",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "rt1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:585008071590:route-table/rtb-0f847a52ba1a6829c",
            "default_route_table_id": "rtb-0f847a52ba1a6829c",
            "id": "rtb-0f847a52ba1a6829c",
            "owner_id": "585008071590",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-086ba0493b2897704",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "terra-route-table"
            },
            "tags_all": {
              "Name": "terra-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-016f57a56749a5268"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.auto_scaling.aws_internet_gateway.my_igw",
            "module.auto_scaling.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.auto_scaling",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "my_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:585008071590:internet-gateway/igw-086ba0493b2897704",
            "id": "igw-086ba0493b2897704",
            "owner_id": "585008071590",
            "tags": {
              "Name": "terra-igw"
            },
            "tags_all": {
              "Name": "terra-igw"
            },
            "vpc_id": "vpc-016f57a56749a5268"
          },
          "dependencies": [
            "module.auto_scaling.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.auto_scaling",
      "mode": "managed",
      "type": "aws_lb",
      "name": "my_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-2:585008071590:loadbalancer/app/terra-alb/670cccbd752ce570",
            "arn_suffix": "app/terra-alb/670cccbd752ce570",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "terra-alb-225437648.ap-southeast-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:ap-southeast-2:585008071590:loadbalancer/app/terra-alb/670cccbd752ce570",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "terra-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-04b69d91d014ab112"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-018f48bc2bbaeb44b"
              },
              {
                "subnet_id": "subnet-083b312646e88d791"
              }
            ],
            "subnets": [
              "subnet-018f48bc2bbaeb44b",
              "subnet-083b312646e88d791"
            ],
            "tags": {
              "Name": "terra-alb"
            },
            "tags_all": {
              "Name": "terra-alb"
            },
            "vpc_id": "vpc-016f57a56749a5268",
            "xff_header_processing_mode": "append",
            "zone_id": "Z1GM3OXH4ZPM65"
          },
          "dependencies": [
            "module.auto_scaling.aws_security_group.my_sg",
            "module.auto_scaling.aws_subnet.public_sub_a",
            "module.auto_scaling.aws_subnet.public_sub_b",
            "module.auto_scaling.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.auto_scaling",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-2:585008071590:listener/app/terra-alb/670cccbd752ce570/3375f54a3a3692a1",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [
                  {
                    "content_type": "text/plain",
                    "message_body": "Welcome to Homepage",
                    "status_code": "200"
                  }
                ],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "",
                "type": "fixed-response"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-2:585008071590:listener/app/terra-alb/670cccbd752ce570/3375f54a3a3692a1",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-southeast-2:585008071590:loadbalancer/app/terra-alb/670cccbd752ce570",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.auto_scaling.aws_lb.my_alb",
            "module.auto_scaling.aws_security_group.my_sg",
            "module.auto_scaling.aws_subnet.public_sub_a",
            "module.auto_scaling.aws_subnet.public_sub_b",
            "module.auto_scaling.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.auto_scaling",
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "laptop",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-southeast-2:585008071590:targetgroup/terra-laptop-target-group/f8c90ef5f768fe4d",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-2:585008071590:listener-rule/app/terra-alb/670cccbd752ce570/3375f54a3a3692a1/c23d8defa34bdeb4",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/laptop/*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-2:585008071590:listener-rule/app/terra-alb/670cccbd752ce570/3375f54a3a3692a1/c23d8defa34bdeb4",
            "listener_arn": "arn:aws:elasticloadbalancing:ap-southeast-2:585008071590:listener/app/terra-alb/670cccbd752ce570/3375f54a3a3692a1",
            "priority": 1,
            "tags": null,
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.auto_scaling.aws_lb.my_alb",
            "module.auto_scaling.aws_lb_listener.http",
            "module.auto_scaling.aws_lb_target_group.laptop_target_group",
            "module.auto_scaling.aws_security_group.my_sg",
            "module.auto_scaling.aws_subnet.public_sub_a",
            "module.auto_scaling.aws_subnet.public_sub_b",
            "module.auto_scaling.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.auto_scaling",
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "mobile",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-southeast-2:585008071590:targetgroup/terra-mobile-target-group/345c05c4a52171a6",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-2:585008071590:listener-rule/app/terra-alb/670cccbd752ce570/3375f54a3a3692a1/5d96718d07589824",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/mobile/*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-2:585008071590:listener-rule/app/terra-alb/670cccbd752ce570/3375f54a3a3692a1/5d96718d07589824",
            "listener_arn": "arn:aws:elasticloadbalancing:ap-southeast-2:585008071590:listener/app/terra-alb/670cccbd752ce570/3375f54a3a3692a1",
            "priority": 2,
            "tags": null,
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.auto_scaling.aws_lb.my_alb",
            "module.auto_scaling.aws_lb_listener.http",
            "module.auto_scaling.aws_lb_target_group.mobile_target_group",
            "module.auto_scaling.aws_security_group.my_sg",
            "module.auto_scaling.aws_subnet.public_sub_a",
            "module.auto_scaling.aws_subnet.public_sub_b",
            "module.auto_scaling.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.auto_scaling",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "home_target_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-2:585008071590:targetgroup/terra-home-target-group/c6f6a72e92454acf",
            "arn_suffix": "targetgroup/terra-home-target-group/c6f6a72e92454acf",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-2:585008071590:targetgroup/terra-home-target-group/c6f6a72e92454acf",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "terra-home-target-group",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-016f57a56749a5268"
          },
          "dependencies": [
            "module.auto_scaling.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.auto_scaling",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "laptop_target_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-2:585008071590:targetgroup/terra-laptop-target-group/f8c90ef5f768fe4d",
            "arn_suffix": "targetgroup/terra-laptop-target-group/f8c90ef5f768fe4d",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-2:585008071590:targetgroup/terra-laptop-target-group/f8c90ef5f768fe4d",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "terra-laptop-target-group",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-016f57a56749a5268"
          },
          "dependencies": [
            "module.auto_scaling.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.auto_scaling",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "mobile_target_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-2:585008071590:targetgroup/terra-mobile-target-group/345c05c4a52171a6",
            "arn_suffix": "targetgroup/terra-mobile-target-group/345c05c4a52171a6",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-2:585008071590:targetgroup/terra-mobile-target-group/345c05c4a52171a6",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "terra-mobile-target-group",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-016f57a56749a5268"
          },
          "dependencies": [
            "module.auto_scaling.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.auto_scaling",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "my_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:585008071590:security-group/sg-04b69d91d014ab112",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04b69d91d014ab112",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "allow HTTP protocol",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "allow SSH protocol",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "terraform-20241226071427225000000001",
            "name_prefix": "terraform-",
            "owner_id": "585008071590",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "terra-sg"
            },
            "tags_all": {
              "Name": "terra-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-016f57a56749a5268"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.auto_scaling.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.auto_scaling",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_sub_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:585008071590:subnet/subnet-015f04a982950f453",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2a",
            "availability_zone_id": "apse2-az1",
            "cidr_block": "10.0.0.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-015f04a982950f453",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "585008071590",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "terra-private-sub-a"
            },
            "tags_all": {
              "Name": "terra-private-sub-a"
            },
            "vpc_id": "vpc-016f57a56749a5268"
          },
          "dependencies": [
            "module.auto_scaling.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.auto_scaling",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_sub_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:585008071590:subnet/subnet-0124ff84071d8c5a2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2b",
            "availability_zone_id": "apse2-az3",
            "cidr_block": "10.0.16.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0124ff84071d8c5a2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "585008071590",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "terra-private-sub-b"
            },
            "tags_all": {
              "Name": "terra-private-sub-b"
            },
            "vpc_id": "vpc-016f57a56749a5268"
          },
          "dependencies": [
            "module.auto_scaling.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.auto_scaling",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_sub_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:585008071590:subnet/subnet-083b312646e88d791",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2a",
            "availability_zone_id": "apse2-az1",
            "cidr_block": "10.0.32.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-083b312646e88d791",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "585008071590",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "terra-public-sub-a"
            },
            "tags_all": {
              "Name": "terra-public-sub-a"
            },
            "vpc_id": "vpc-016f57a56749a5268"
          },
          "dependencies": [
            "module.auto_scaling.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.auto_scaling",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_sub_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:585008071590:subnet/subnet-018f48bc2bbaeb44b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2b",
            "availability_zone_id": "apse2-az3",
            "cidr_block": "10.0.48.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-018f48bc2bbaeb44b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "585008071590",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "terra-public-sub-b"
            },
            "tags_all": {
              "Name": "terra-public-sub-b"
            },
            "vpc_id": "vpc-016f57a56749a5268"
          },
          "dependencies": [
            "module.auto_scaling.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.auto_scaling",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "my_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:585008071590:vpc/vpc-016f57a56749a5268",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-08dad12f5610aadf3",
            "default_route_table_id": "rtb-0f847a52ba1a6829c",
            "default_security_group_id": "sg-07434e9651b8d1a8e",
            "dhcp_options_id": "dopt-0c53b50ac0bc8b697",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-016f57a56749a5268",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0f847a52ba1a6829c",
            "owner_id": "585008071590",
            "tags": {
              "Name": "terra-vpc"
            },
            "tags_all": {
              "Name": "terra-vpc"
            }
          }
        }
      ]
    }
  ]
}